# tiktok_auto

./: .gitignore  Dockerfile  docker-compose.yml  package-lock.json  package.json  pyproject.toml  test.py
backend/: bios.txt  note.txt  test_database.py  test_ip.py  test_stealth.py
backend/app/: main.py
backend/app/core/: config.py  exceptions.py
backend/app/domain/entities/: account.py  proxy.py
backend/app/domain/ports/: browser.py  email.py  repository.py
backend/app/infrastructure/automation/: playwright_adapter.py
backend/app/infrastructure/database/: connection.py  schemas.py  sqlite_repository.py
backend/app/infrastructure/email/: dongvan_service.py
backend/app/infrastructure/scheduler/: interaction_scheduler.py
backend/app/infrastructure/websocket/: socket_manager.py
backend/app/interfaces/api/: accounts_router.py  deps.py  interactions_router.py  proxies_router.py  tasks_router.py
backend/app/interfaces/dto/: account_dto.py  proxy_dto.py
backend/app/use_cases/auth/: login_strategies.py  tiktok_login.py
frontend/: .gitignore  Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AccountsTable.tsx  ContextMenu.tsx  ControlPanel.tsx  FolderTree.tsx  Header.tsx  ImportModal.tsx  InteractionPanel.tsx  ProxiesTable.tsx  Sidebar.tsx  StatsCards.tsx  TerminalConsole.tsx
frontend/src/services/: api.ts  websocket.ts
frontend/src/store/: useAppStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: countries.ts
(+4 files in other folders)
